--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/adlam_display</item>
         <item>@font/alata</item>
+        <item>@font/alfa_slab_one</item>
+        <item>@font/amaranth</item>
     </array>
 </resources>
