--- a/app/src/main/res/layout/fragment_op__insertar.xml
+++ b/app/src/main/res/layout/fragment_op__insertar.xml
@@ -7,26 +7,47 @@
     tools:context=".Op_Insertar">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/Altas"
+        android:layout_width="409dp"
+        android:layout_height="53dp"
+        android:background="#84AAF0"
+        android:fontFamily="sans-serif-black"
+        android:text="Altas"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="25dp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="385dp" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_width="58dp"
+        android:layout_height="12dp"
         android:text="Nombre"
-        app:layout_constraintEnd_toStartOf="@+id/txtnombre"
-        app:layout_constraintHorizontal_bias="0.346"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
+        tools:layout_editor_absoluteY="224dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
@@ -68,8 +89,7 @@
         android:layout_marginTop="76dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/txtPassword"
-        app:layout_constraintHorizontal_bias="0.343"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
