--- a/app/src/main/res/layout/fragment_op__insertar.xml
+++ b/app/src/main/res/layout/fragment_op__insertar.xml
@@ -37,18 +37,27 @@
         android:id="@+id/textView3"
         android:layout_width="58dp"
         android:layout_height="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="50dp"
         android:text="Nombre"
+        app:layout_constraintEnd_toStartOf="@+id/txtNombre"
+        app:layout_constraintHorizontal_bias="0.354"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        tools:layout_editor_absoluteY="224dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:text="Nombre" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="TextView"
+        android:layout_marginEnd="50dp"
+        android:text="Usuario"
+        app:layout_constraintEnd_toStartOf="@+id/txtUsuario"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:text="Usuario" />
 
     <EditText
         android:id="@+id/txtNombre"
@@ -76,9 +85,11 @@
         android:id="@+id/btnregistrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
         android:text="Registrar"
+        app:layout_constraintEnd_toStartOf="@+id/btnlimpiar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -86,11 +97,14 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:text="TextView"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:text="Contraseña"
         app:layout_constraintEnd_toStartOf="@+id/txtPassword"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:text="Contraseña" />
 
     <EditText
         android:id="@+id/txtPassword"
@@ -117,10 +131,12 @@
         android:id="@+id/btnlimpiar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         android:text="Limpiar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toEndOf="@+id/btnregistrar"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
