--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,14 +28,14 @@
         android:id="@+id/imageView2"
         android:layout_width="73dp"
         android:layout_height="67dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/txtPassword"
+        app:layout_constraintEnd_toStartOf="@+id/txtPrecio"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/img_1" />
 
     <EditText
-        android:id="@+id/txtPassword"
+        android:id="@+id/txtPrecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -45,7 +45,7 @@
         android:inputType="textPassword"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />
+        app:layout_constraintTop_toBottomOf="@+id/txtStock" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -67,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -120,7 +120,7 @@
         app:layout_constraintGuide_begin="449dp" />
 
     <EditText
-        android:id="@+id/txtUsuario"
+        android:id="@+id/txtStock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
