--- a/app/src/main/res/layout/fragment_op__eliminar.xml
+++ b/app/src/main/res/layout/fragment_op__eliminar.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline6">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delBuscaID"
+            android:id="@+id/txtIdProducto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID del usuario" />
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline9">
 
         <TextView
-            android:id="@+id/delID"
+            android:id="@+id/txtID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID" />
@@ -119,7 +119,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
         <TextView
-            android:id="@+id/delNombre"
+            android:id="@+id/txtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre" />
@@ -136,7 +136,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
         <TextView
-            android:id="@+id/delUser"
+            android:id="@+id/txtStock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="User" />
@@ -153,7 +153,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
         <TextView
-            android:id="@+id/delPassword"
+            android:id="@+id/txtPrecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password" />
