--- a/app/src/main/res/layout/fragment_op_editar.xml
+++ b/app/src/main/res/layout/fragment_op_editar.xml
@@ -33,7 +33,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar usuario"
+        android:text="Editar Producto"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -85,10 +85,10 @@
         app:layout_constraintTop_toTopOf="@+id/guideline6">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delBuscaID"
+            android:id="@+id/txtIdProducto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ID del usuario"
+            android:hint="ID del producto"
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline9">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delID"
+            android:id="@+id/txtID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ID"
@@ -122,7 +122,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delNombre"
+            android:id="@+id/txtNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre"
@@ -140,10 +140,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delUser"
+            android:id="@+id/txtStock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="User"
+            android:hint="Stock"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -158,10 +158,10 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/delPassword"
+            android:id="@+id/txtPrecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="Precio"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
