--- a/app/src/main/res/layout/fragment_op__consultar.xml
+++ b/app/src/main/res/layout/fragment_op__consultar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/layout_consulta"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F4F6"
+    android:background="#CFE8FA"
     tools:context=".Op_Consultar">
 
     <!-- Cabecera -->
@@ -11,18 +11,20 @@
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:background="#673AB7"
         android:gravity="center_vertical"
-        android:background="#3F51B5"
+        android:orientation="horizontal"
         android:padding="16dp">
 
         <TextView
             android:id="@+id/tvTituloConsulta"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Usuarios Registrados"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Productos Registrados"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#FFEB3B"
+            android:textSize="26sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -32,42 +34,58 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/header_layout"
+        android:background="#0EFFB1"
         android:orientation="horizontal"
         android:padding="8dp"
-        android:weightSum="4"
-        android:background="#D3D3D3">
+        android:weightSum="4">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="ID"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Nombre"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Usuario"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="Stock"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Contraseña"
-            android:textStyle="bold"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="Precio"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Botón Limpiar -->
@@ -75,24 +93,25 @@
         android:id="@+id/btnLimpiar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Limpiar"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="16dp"
         android:backgroundTint="#FF4081"
-        android:textColor="#FFFFFF"
         android:paddingStart="24dp"
-        android:paddingEnd="24dp" />
+        android:paddingEnd="24dp"
+        android:text="Limpiar"
+        android:textColor="#FFFFFF" />
 
     <!-- Lista de usuarios -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewConsulta"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/layoutEncabezadoTabla"
         android:layout_above="@id/btnLimpiar"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="39dp"
+        android:layout_below="@id/layoutEncabezadoTabla"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="54dp"
+        android:background="#CFE8FA"
         android:clipToPadding="false"
         android:padding="8dp"
         android:scrollbars="vertical" />
